[package]
edition = "2024"
name = "mdbutil"
rust-version = "1.88"
version = "0.1.0"

[profile.fuzz]
codegen-units = 1
incremental = false
inherits = "dev"
opt-level = 3

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
mmap-rs = "0.6"

[dev-dependencies]
bolero = "0.13"
tempfile = "3"

[[test]]
harness = false
name = "mtr_parse_next_test"

[[test]]
harness = false
name = "file_checkpoint_test"
